# learn-poetry

project_0/: pyproject.toml
project_0/tests/: test_myproject.py
project_1_fastapi_helloworld/: README.md  pyproject.toml
project_1_fastapi_helloworld/project_1_fastapi_helloworld/: main.py
project_1_fastapi_helloworld/tests/: test_main.py
