[tool.poetry]
name = "project-0"
version = "0.1.0"
description = ""
authors = ["sumra <sumrakhalidev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
